MOSIP-42334 Fixed performance
Signed-off-by: kameshsr <kameshsr1338@gmail.com>