@@ -69,8 +69,8 @@ public class PacketManagerService {
         objectMapper.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
     }
 
-	public String getField(String id, String field, String source, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public String getField(String id, String field, String source, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         FieldDto fieldDto = new FieldDto(id, field, source, process, false);
 
         RequestWrapper<FieldDto> request = new RequestWrapper<>();
@@ -85,21 +85,23 @@ public class PacketManagerService {
             ErrorDTO errorDTO = response.getErrors().iterator().next();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
 
-        FieldResponseDto fieldResponseDto = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), FieldResponseDto.class);
+        FieldResponseDto fieldResponseDto = convert(response.getResponse(), FieldResponseDto.class);
+        if (fieldResponseDto == null || fieldResponseDto.getFields() == null) {
+            return null;
+        }
 
-        String responseField = fieldResponseDto.getFields().get(field);
-        if (StringUtils.isNotEmpty(responseField) && responseField.equalsIgnoreCase("null"))
-            responseField = null;
-        return responseField;
+        String value = fieldResponseDto.getFields().get(field);
+        // Preserve original behavior: "null" string → null
+        return (value != null && "null".equalsIgnoreCase(value)) ? null : value;
     }
 
-	public Map<String, String> getFields(String id, List<String> fields, String source, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public Map<String, String> getFields(String id, List<String> fields, String source, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         FieldDtos fieldDto = new FieldDtos(id, fields, source, process, false);
 
         RequestWrapper<FieldDtos> request = new RequestWrapper<>();
@@ -114,23 +116,21 @@ public class PacketManagerService {
             ErrorDTO errorDTO = response.getErrors().iterator().next();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
 
-        FieldResponseDto fieldResponseDto = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), FieldResponseDto.class);
-
-        return fieldResponseDto.getFields();
+        return convert(response.getResponse(), FieldResponseDto.class).getFields();
     }
 
-	public Document getDocument(String id, String documentName, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public Document getDocument(String id, String documentName, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         return getDocument(id, documentName, null, process);
     }
 
-	public Document getDocument(String id, String documentName, String source, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public Document getDocument(String id, String documentName, String source, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         DocumentDto fieldDto = new DocumentDto(id, documentName, source, process);
 
         RequestWrapper<DocumentDto> request = new RequestWrapper<>();
@@ -140,23 +140,21 @@ public class PacketManagerService {
         request.setRequest(fieldDto);
         ResponseWrapper<Document> response = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_SEARCH_DOCUMENT, "", "", request, ResponseWrapper.class);
 
-        if (response.getErrors() != null && response.getErrors().size() > 0) {
+        if (response.getErrors() != null && !response.getErrors().isEmpty()) {
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(), id, JsonUtils.javaObjectToJsonString(response));
-            ErrorDTO errorDTO = response.getErrors().iterator().next();
+            ErrorDTO errorDTO = response.getErrors().getFirst();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
 
-        Document document = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), Document.class);
-
-        return document;
+        return convert(response.getResponse(), Document.class);
     }
 
-	public ValidatePacketResponse validate(String id, String source, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public ValidatePacketResponse validate(String id, String source, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         InfoDto fieldDto = new InfoDto(id, source, process, false);
 
         RequestWrapper<InfoDto> request = new RequestWrapper<>();
@@ -171,17 +169,15 @@ public class PacketManagerService {
             ErrorDTO errorDTO = response.getErrors().iterator().next();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
-        ValidatePacketResponse validatePacketResponse = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), ValidatePacketResponse.class);
-
-        return validatePacketResponse;
+        return convert(response.getResponse(), ValidatePacketResponse.class);
     }
 
-	public List<FieldResponseDto> getAudits(String id, String source, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public List<FieldResponseDto> getAudits(String id, String source, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
 
         InfoDto fieldDto = new InfoDto(id, source, process, false);
         List<FieldResponseDto> response = new ArrayList<>();
@@ -191,29 +187,33 @@ public class PacketManagerService {
         request.setVersion(VERSION);
         request.setRequesttime(DateUtils2.getUTCCurrentDateTime());
         request.setRequest(fieldDto);
-        ResponseWrapper<List<FieldResponseDto>> responseObj = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_SEARCH_AUDITS, "", "", request, ResponseWrapper.class);
+        ResponseWrapper<List<Object>> responseObj = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_SEARCH_AUDITS, "", "", request, ResponseWrapper.class);
 
         if (responseObj.getErrors() != null && responseObj.getErrors().size() > 0) {
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(), id, JsonUtils.javaObjectToJsonString(responseObj));
             ErrorDTO errorDTO = responseObj.getErrors().iterator().next();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
 
-        for (Object o : responseObj.getResponse()) {
-            FieldResponseDto fieldResponseDto = objectMapper.readValue(JsonUtils.javaObjectToJsonString(o), FieldResponseDto.class);
-            response.add(fieldResponseDto);
+        List<Object> rawList = responseObj.getResponse();
+        if (rawList == null || rawList.isEmpty()) {
+            return new ArrayList<>();
         }
 
-        return response;
+        List<FieldResponseDto> result = new ArrayList<>(rawList.size());
+        for (Object item : rawList) {
+            result.add(convert(item, FieldResponseDto.class));
+        }
+        return result;
     }
 
-	public BiometricRecord getBiometrics(String id, String person, List<String> modalities, String source,
-			String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public BiometricRecord getBiometrics(String id, String person, List<String> modalities, String source,
+                                         String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
 
         BiometricRequestDto fieldDto = new BiometricRequestDto(id, person, modalities, source, process, false);
 
@@ -224,25 +224,23 @@ public class PacketManagerService {
         request.setRequest(fieldDto);
         ResponseWrapper<BiometricRecord> response = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_SEARCH_BIOMETRICS, "", "", request, ResponseWrapper.class);
 
-        if (response.getErrors() != null && response.getErrors().size() > 0) {
+        if (response.getErrors() != null && !response.getErrors().isEmpty()) {
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(), id, JsonUtils.javaObjectToJsonString(response));
-            ErrorDTO errorDTO = response.getErrors().iterator().next();
+            ErrorDTO errorDTO = response.getErrors().getFirst();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
         if (response.getResponse() != null) {
-            BiometricRecord biometricRecord = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), BiometricRecord.class);
-            return biometricRecord;
+            return convert(response.getResponse(), BiometricRecord.class);
         }
         return null;
-
     }
 
-	public Map<String, String> getMetaInfo(String id, String source, String process)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public Map<String, String> getMetaInfo(String id, String source, String process)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         InfoDto fieldDto = new InfoDto(id, source, process, false);
 
         RequestWrapper<InfoDto> request = new RequestWrapper<>();
@@ -252,24 +250,22 @@ public class PacketManagerService {
         request.setRequest(fieldDto);
         ResponseWrapper<FieldResponseDto> response = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_SEARCH_METAINFO, "", "", request, ResponseWrapper.class);
 
-        if (CollectionUtils.isNotEmpty(response.getErrors())) {
+        if (response.getErrors() != null && CollectionUtils.isNotEmpty(response.getErrors())) {
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(),
                     LoggerFileConstant.REGISTRATIONID.toString(), id, JsonUtils.javaObjectToJsonString(response));
-            ErrorDTO errorDTO = response.getErrors().iterator().next();
+            ErrorDTO errorDTO = response.getErrors().getFirst();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
 
-        FieldResponseDto fieldResponseDto = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), FieldResponseDto.class);
-
-        return fieldResponseDto.getFields();
+        return convert(response.getResponse(), FieldResponseDto.class).getFields();
     }
 
-	public InfoResponseDto info(String id)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
+    public InfoResponseDto info(String id)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         InfoRequestDto infoRequestDto = new InfoRequestDto(id);
 
         RequestWrapper<InfoRequestDto> request = new RequestWrapper<>();
@@ -279,19 +275,17 @@ public class PacketManagerService {
         request.setRequest(infoRequestDto);
         ResponseWrapper<InfoResponseDto> response = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_INFO, "", "", request, ResponseWrapper.class);
 
-        if (response.getErrors() != null && response.getErrors().size() > 0) {
+        if (response.getErrors() != null && !response.getErrors().isEmpty()) {
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(), id, JsonUtils.javaObjectToJsonString(response));
-            ErrorDTO errorDTO = response.getErrors().iterator().next();
+            ErrorDTO errorDTO = response.getErrors().getFirst();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
 
-        InfoResponseDto infoResponseDto = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), InfoResponseDto.class);
-
-        return infoResponseDto;
+        return convert(response.getResponse(), InfoResponseDto.class);
     }
 
     public void addOrUpdateTags(String id, Map<String, String> tags) throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
@@ -304,43 +298,41 @@ public class PacketManagerService {
         request.setRequest(updateTagRequestDto);
         ResponseWrapper<Void> response = (ResponseWrapper) restApi.postApi(ApiName.PACKETMANAGER_UPDATE_TAGS, "", "", request, ResponseWrapper.class);
 
-        if (response.getErrors() != null && response.getErrors().size() > 0) {
+        if (response.getErrors() != null && !response.getErrors().isEmpty()) {
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(), id, JsonUtils.javaObjectToJsonString(response));
-            ErrorDTO errorDTO = response.getErrors().iterator().next();
+            ErrorDTO errorDTO = response.getErrors().getFirst();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
         }
     }
 
-	@SuppressWarnings("unchecked")
-	public void deleteTags(String id, List<String> tags)
-			throws ApisResourceAccessException, PacketManagerException, JsonProcessingException {
-		DeleteTagRequestDTO deleteTagREquestDto = new DeleteTagRequestDTO(id, tags);
-		RequestWrapper<DeleteTagRequestDTO> request = new RequestWrapper<>();
-		request.setId(ID);
-		request.setVersion(VERSION);
-		request.setRequesttime(DateUtils2.getUTCCurrentDateTime());
-		request.setRequest(deleteTagREquestDto);
-		ResponseWrapper<DeleteTagResponseDTO> response = (ResponseWrapper<DeleteTagResponseDTO>) restApi
-				.postApi(ApiName.PACKETMANAGER_DELETE_TAGS, "", "",
-				request, ResponseWrapper.class);
+    @SuppressWarnings("unchecked")
+    public void deleteTags(String id, List<String> tags)
+            throws ApisResourceAccessException, PacketManagerException, JsonProcessingException {
+        DeleteTagRequestDTO deleteTagREquestDto = new DeleteTagRequestDTO(id, tags);
+        RequestWrapper<DeleteTagRequestDTO> request = new RequestWrapper<>();
+        request.setId(ID);
+        request.setVersion(VERSION);
+        request.setRequesttime(DateUtils2.getUTCCurrentDateTime());
+        request.setRequest(deleteTagREquestDto);
+        ResponseWrapper<DeleteTagResponseDTO> response = (ResponseWrapper<DeleteTagResponseDTO>) restApi
+                .postApi(ApiName.PACKETMANAGER_DELETE_TAGS, "", "",
+                        request, ResponseWrapper.class);
 
-		if (response.getErrors() != null && response.getErrors().size() > 0) {
-			regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(),
-					id, JsonUtils.javaObjectToJsonString(response));
-            ErrorDTO errorDTO = response.getErrors().iterator().next();
+        if (response.getErrors() != null && !response.getErrors().isEmpty()) {
+            regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(),
+                    id, JsonUtils.javaObjectToJsonString(response));
+            ErrorDTO errorDTO = response.getErrors().getFirst();
             if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                 throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-            if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+            if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                 throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
             throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
-		}
-
-
-	}
+        }
+    }
 
     public Map<String, String> getAllTags(String id) throws ApisResourceAccessException, PacketManagerException, JsonProcessingException, IOException {
         return getTags(id, null);
@@ -357,29 +349,28 @@ public class PacketManagerService {
                 .postApi(ApiName.PACKETMANAGER_GET_TAGS, "", "",
                         request, ResponseWrapper.class);
 
-        if (response.getErrors() != null && response.getErrors().size() > 0) {
-        	ErrorDTO error=response.getErrors().get(0);
+        if (response.getErrors() != null && !response.getErrors().isEmpty()) {
+            ErrorDTO error = response.getErrors().getFirst();
             regProcLogger.error(LoggerFileConstant.SESSIONID.toString(), LoggerFileConstant.REGISTRATIONID.toString(),
                     id, JsonUtils.javaObjectToJsonString(response));
             //This error code will return if requested tag is not present ,so returning null for that
-            if(error.getErrorCode().equalsIgnoreCase("KER-PUT-024")) 
-        		return null;
+            if (error.getErrorCode().equalsIgnoreCase("KER-PUT-024"))
+                return null;
             else {
                 ErrorDTO errorDTO = response.getErrors().iterator().next();
                 if (OBJECT_DOESNOT_EXISTS_ERROR_CODE.equalsIgnoreCase(errorDTO.getErrorCode()))
                     throw new ObjectDoesnotExistsException(errorDTO.getErrorCode(), errorDTO.getMessage());
-                if(PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
+                if (PACKET_MANAGER_NON_RECOVERABLE_ERROR_CODES.contains(errorDTO.getErrorCode()))
                     throw new PacketManagerNonRecoverableException(errorDTO.getErrorCode(), errorDTO.getMessage());
                 throw new PacketManagerException(errorDTO.getErrorCode(), errorDTO.getMessage());
             }
         }
 
-        TagResponseDto tagResponseDto = null;
-        if (response.getResponse() != null) {
-            tagResponseDto = objectMapper.readValue(JsonUtils.javaObjectToJsonString(response.getResponse()), TagResponseDto.class);
-
-        }
-
+        TagResponseDto tagResponseDto = convert(response.getResponse(), TagResponseDto.class);
         return tagResponseDto != null ? tagResponseDto.getTags() : null;
+    }
+
+    private <T> T convert(Object fromValue, Class<T> clazz) {
+        return fromValue == null ? null : objectMapper.convertValue(fromValue, clazz);
     }
 }
